books/projects/rac/tests/yaml_test/control_flow/if-return.cpp
// RAC begin

int foo(int a)
{
  if (a)
    return 1;

  return 0;
}

// RAC end
